--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <style>
         body {
-            background-color: #151F19;
+            font-size: 18px;
+  font-family: "Vibur", sans-serif;
+  background-color: #010a01;
         }
 
         .container {
@@ -21,7 +23,16 @@
             text-align: center;
             margin: auto;
             margin-top: 60px;
-            background-color: #C4CDCE;
+         color: #fff;
+  text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #0fa,
+      0 0 82px #0fa,
+      0 0 92px #0fa,
+      0 0 102px #0fa,
+      0 0 151px #0fa;
         }
 
         .heading {
