--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
 
         h1 {
             font-family: 'Orbitron', sans-serif;
+              color: #fff;
+  text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #0fa,
+      0 0 82px #0fa,
+      0 0 92px #0fa,
+      0 0 102px #0fa,
+      0 0 151px #0fa;
+        }
         }
     </style>
 </head>
