--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       0 0 92px #0fa,
       0 0 102px #0fa,
       0 0 151px #0fa;
+            background-color: #010a01;
         }
 
         .heading {
@@ -59,6 +60,7 @@
       0 0 151px #0fa;
         }
         }
+        background-color: #010a01;
     </style>
 </head>
 
